# composeguard

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BRIEF.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
examples/: README.md  hardened-compose.yml  insecure-compose.yml
scripts/: install.sh
src/composeguard/: analyzer.py  cli.py  models.py
src/composeguard/checks/: __init__.py  image.py  mounts.py  network.py  privilege.py  resources.py  sandbox.py  secrets.py
tests/: helpers.py  test_analyzer.py  test_checks.py  test_cli.py
