[project]
name = "composeguard"
version = "0.1.1"
description = "Static analyzer for docker-compose.yml that flags insecure configurations before deployment."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "NokiGuard" }]
keywords = ["docker", "compose", "security", "static-analysis", "homelab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "PyYAML>=6.0.2",
]

[project.scripts]
composeguard = "composeguard.cli:main"

[project.urls]
Homepage = "https://github.com/NokiGuard/composeguard"
Issues = "https://github.com/NokiGuard/composeguard/issues"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/composeguard"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit[toml]>=1.8",
    "pip-audit>=2.7",
    "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # simplify
    "RUF", # ruff-specific
    "PTH", # use pathlib
    "TID", # tidy imports
    "ARG", # unused args
    "C4",  # comprehensions
]
ignore = [
    "S101", # asserts ok in tests (also see per-file-ignores)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
files = ["src", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=composeguard",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["composeguard"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
